# proust-inference

./: README.md  pyproject.toml  score_proteingym.py
proust_inference/: __init__.py  attention.py  canon.py  config.py  fa4_backend.py  ffn.py  gqa_s2.py  hub.py  model.py  norm.py  rope.py  tokenizer.py
